objects/PRH_Competitor_Brands__c.object
<CustomObject>
    <fields>
        <fullName>PRH_Collect__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Collect</label>
        <referenceTo>PRH_Collect__c</referenceTo>
        <relationshipLabel>Competitor Brands</relationshipLabel>
        <relationshipName>Competitor_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRH_Iconic_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Iconic Account</label>
        <referenceTo>PRH_Luxury_Accounts__c</referenceTo>
        <relationshipLabel>Competitor Brands</relationshipLabel>
        <relationshipName>Competitor_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRH_Iconic_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Name</label>
        <referenceTo>PRH_Brand_Luxury_Brand__c</referenceTo>
        <relationshipLabel>Competitor Brands</relationshipLabel>
        <relationshipName>Competitor_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRH_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Volume__c</fullName>
        <label>FYTD Vol (L/year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitor Brand</label>
    <nameField>
        <displayFormat>CB-{0000000000}</displayFormat>
        <label>Competitor Brands Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Brands</pluralLabel>
    <recordTypes>
        <fullName>PRH_Luxury_Account_Competitor</fullName>
        <active>true</active>
        <description>PRH - Luxury Account for Iconic Platform Competitor Brands</description>
        <label>Luxury Account - Competitor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>